<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewReviews"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/colorCardView"
        android:layout_margin="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/review_author_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author_tv"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/review_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"
                android:layout_toEndOf="@id/review_author_tv"/>

            <TextView
                android:id="@+id/review_text_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/review_text_tv"
                android:layout_marginTop="10dp"
                android:layout_below="@id/review_author_tv"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/review_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/review_author"
                android:layout_toEndOf="@id/review_text_tv"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/review_url_more_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/review_more_text_tv"
                android:layout_below="@id/review_text"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/review_url_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_below="@id/review_text"
                android:layout_toEndOf="@id/review_url_more_tv"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:textColor="@color/white"
                />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>