<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/colorPrimary">
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/movieDetailsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/movie_poster"
                    android:layout_width="@dimen/movie_poster_width"
                    android:layout_height="@dimen/movie_poster_height"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="@dimen/movie_poster_margin_top"
                    android:contentDescription="@string/movie_poster_cd"
                    android:scaleType="fitXY" />

                <TextView
                    android:id="@+id/movie_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/movie_title_margin_left"
                    android:layout_marginTop="@dimen/movie_title_margin_top"
                    android:layout_toRightOf="@id/movie_poster"
                    android:textColor="@color/white"
                    android:textSize="@dimen/movie_title_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/movie_tag_line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/movie_title"
                    android:layout_marginLeft="@dimen/movie_title_margin_left"
                    android:layout_marginTop="@dimen/movie_title_margin_top"
                    android:layout_toRightOf="@id/movie_poster"
                    android:textColor="@color/white" />


                <RatingBar
                    android:id="@+id/movie_rating"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/movie_tag_line"
                    android:layout_marginLeft="@dimen/movie_title_margin_left"
                    android:layout_marginTop="@dimen/movie_title_margin_top"
                    android:layout_toRightOf="@id/movie_poster"
                    android:numStars="10"
                    android:theme="@style/RatingBar" />

                <TextView
                    android:id="@+id/movie_rating_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/movie_tag_line"
                    android:layout_marginLeft="@dimen/movie_rating_margin_left"
                    android:layout_marginTop="@dimen/movie_title_margin_top"
                    android:layout_toRightOf="@id/movie_rating"
                    android:textColor="@color/white"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/release_date_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/movie_rating"
                    android:layout_marginLeft="@dimen/movie_title_margin_left"
                    android:layout_marginTop="@dimen/movie_title_margin_top"
                    android:layout_toRightOf="@id/movie_poster"
                    android:text="@string/released_on"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/movie_rating"
                    android:layout_marginLeft="@dimen/release_date_margin_left"
                    android:layout_marginTop="@dimen/movie_title_margin_top"
                    android:layout_toRightOf="@id/release_date_tv"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/movie_synopsis_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/release_date_tv"
                    android:layout_marginLeft="@dimen/movie_title_margin_left"
                    android:layout_marginTop="@dimen/movie_title_margin_top"
                    android:layout_toRightOf="@id/movie_poster"
                    android:text="@string/synopsis"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/movie_synopsis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/movie_synopsis_tv"
                    android:layout_marginLeft="@dimen/movie_title_margin_left"
                    android:layout_marginTop="@dimen/movie_title_margin_top"
                    android:layout_toRightOf="@id/movie_poster"
                    android:textColor="@color/white" />


                <ProgressBar
                    android:id="@+id/progressBar3"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:visibility="gone" />

            </RelativeLayout>

        </ScrollView>

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorCardView"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/watch_trailer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:clickable="true"
        android:visibility="gone"
        >

        <ImageView
            android:id="@+id/play_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_play_button"/>

        <TextView
            android:id="@+id/watch_trailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watch_trailer"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_toEndOf="@id/play_button"
            android:layout_centerVertical="true"
            />

    </RelativeLayout>

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorCardView"
        android:visibility="gone"/>


</LinearLayout>